--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["new-types.d.ts",
+  "next-env.d.ts",
+  ".next/types/**/*.ts",
+  "**/*.ts",
+  "**/*.tsx"],
   "exclude": ["node_modules"]
 }
